<resources>
    <string name="app_name">VocalWarmUp</string>
    <string name="preconfigured_warmups">Быстрый старт</string>
    <string name="constructor">Конструктор распевок</string>
    <string name="saved_warmups">Сохраненные распевки</string>
    <string name="warmup_category">Чтобы начать тренировку, выберите тип распевки</string>
    <string name="configure_training">Настройка тренировки</string>
    <string name="boundary_notes">Стартовая нота и ваш диапазон</string>
    <string name="warm_up_step">Шаг распевки</string>
    <string name="warm_up_step_pause">Пауза между шагами</string>
    <string name="warm_up_tempo">Темп распевки, bpm</string>

    <string name="player_config_visualization">Визуализация</string>
    <string name="player_config_volume_settings">Настройки громкости</string>
    <string name="player_config_melody_level">Громкость мелодии</string>
    <string name="player_config_harmony_level">Громкость гармонии</string>
    <string name="player_config_modulation_level">Громкость подстройки</string>

    <string name="player_config_tempo">Темп распевки, bpm</string>

    <string name="menu_bottom_training">Training</string>
    <string name="menu_bottom_saved">Saved</string>
    <string name="menu_bottom_settings">Settings</string>
</resources>
